[metadata]
name = traefik-validator
version = 0.0.1
description = validate_traefik command for validating user traefik config file.
long_description = file:README.rst
url = https://github.com/hhftechnology/traefik-config-valadation
license = MIT
author = hhf technology
author_email = discourse@hhf.technology

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0