[metadata]
name = traefik-validator
version = 0.0.1
description = validate_traefik command for validating user traefik config file.
long_description = file:README.rst
url = https://github.com/hhftechnology/traefik-config-valadation
license = MIT
author = hhf technology
author_email = discourse@hhf.technology

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    attrs>=22.2.0
    importlib-resources>=5.10.2
    jsonschema>=4.17.3
    pkgutil_resolve_name>=1.3.10
    pyrsistent>=0.19.3
    PyYAML>=6.0
    zipp>=3.13.0

[options.packages.find]
exclude =
    tests